--- a/welcome.html
+++ b/welcome.html
@@ -51,6 +51,8 @@
           <a class="navbar-brand" href="https://www.cybertekschool.com/"
             >Cybertek</a
           >
+
+
           <button
             class="navbar-toggler"
             type="button"
@@ -102,23 +104,84 @@
       <!-- ============================================================== -->
       <!-- left sidebar -->
       <!-- ============================================================== -->
+
+
       <div class="nav-left-sidebar sidebar-dark">
         <div class="menu-list">
           <nav class="navbar navbar-expand-lg navbar-light">
             <a class="d-xl-none d-lg-none" href="#">Dashboard</a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarNav"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-              <!-- Build Left side menu items here-->
+              <ul class="navbar-nav flex-column">
+                <li class="nav-divider">
+                  Menu
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="#" data-toggle="collapse" aria-expanded="false" data-target="#submenu-2" aria-controls="submenu-2"><i class="fa fa-address-card"></i>ADMINISTRATION</a>
+                  <div id="submenu-2" class="collapse submenu" style="">
+                    <ul class="nav flex-column">
+                      <li class="nav-item">
+                        <a class="nav-link" href="userCreate.html">User Create <span class="badge badge-secondary">New</span></a>
+
+                      </li>
+
+                      <li class="nav-item">
+                        <a class="nav-link" href="projectCreate.html">Project Create</a>
+                      </li>
+
+                    </ul>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#" data-toggle="collapse" aria-expanded="false" data-target="#submenu-3" aria-controls="submenu-3"><i class="fas fa-fw fa-chart-pie"></i>MANAGER</a>
+                  <div id="submenu-3" class="collapse submenu" style="">
+                    <ul class="nav flex-column">
+                      <li class="nav-item">
+                        <a class="nav-link" href="chart-c3.html">Task Assign</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="chart-chartist.html">Project Status</a>
+                      </li>
+
+                    </ul>
+                  </div>
+                </li>
+                <li class="nav-item ">
+                  <a class="nav-link" href="#" data-toggle="collapse" aria-expanded="false" data-target="#submenu-4" aria-controls="submenu-4"><i class="fab fa-fw fa-wpforms"></i>EMPLOYEES</a>
+                  <div id="submenu-4" class="collapse submenu" style="">
+                    <ul class="nav flex-column">
+                      <li class="nav-item">
+                        <a class="nav-link" href="form-elements.html">Pending Task</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="form-validation.html">Archive</a>
+                      </li>
+
+                    </ul>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#" data-toggle="collapse" aria-expanded="false" data-target="#submenu-5" aria-controls="submenu-5"><i class="fas fa-fw fa-table"></i>Tables</a>
+                  <div id="submenu-5" class="collapse submenu" style="">
+                    <ul class="nav flex-column">
+                      <li class="nav-item">
+                        <a class="nav-link" href="general-table.html">General Tables</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="data-tables.html">Data Tables</a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+
+
+                    </ul>
+                  </div>
+                </li>
+              </ul>
             </div>
           </nav>
         </div>
