--- a/user-create.html
+++ b/user-create.html
@@ -255,13 +255,15 @@
                                         <div class="col-sm-6 col-md-6">
                                             <div class="form-group">
                                                 <label for="firstname" class="col-form-label">First Name</label>
-                                                <input id="firstname" type="text" placeholder="first name" class="form-control">
+                                                <input id="firstname" type="text" placeholder="first name"
+                                                       class="form-control" required="required">
                                             </div>
                                         </div>
                                         <div class="col-sm-6 col-md-6">
                                             <div class="form-group">
                                                 <label for="lastname" class="col-form-label">Last Name</label>
-                                                <input id="lastname" type="text" placeholder="lastname"class="form-control">
+                                                <input id="lastname" type="text" placeholder="lastname"
+                                                       class="form-control" required="required">
                                             </div>
                                         </div>
 
@@ -272,13 +274,15 @@
                                         <div class="col-sm-6 col-md-6">
                                             <div class="form-group">
                                                 <label for="emailadress" class="col-form-label">Email Adress</label>
-                                                <input id="emailadress" type="text" placeholder="email adress" class="form-control">
+                                                <input id="emailadress" type="text" placeholder="email adress"
+                                                       class="form-control" required="required">
                                             </div>
                                         </div>
                                         <div class="col-sm-6 col-md-6">
                                             <div class="form-group">
                                                 <label for="phonenumber" class="col-form-label">Phone Number</label>
-                                                <input id="phonenumber" type="text" placeholder="phone number"class="form-control">
+                                                <input id="phonenumber" type="text" placeholder="phone number"
+                                                       class="form-control" required="required">
                                             </div>
                                         </div>
 
@@ -288,13 +292,15 @@
                                         <div class="col-sm-6 col-md-6">
                                             <div class="form-group">
                                                 <label for="password" class="col-form-label">Password</label>
-                                                <input id="password" type="text" placeholder="password" class="form-control">
+                                                <input id="password" type="text" placeholder="password"
+                                                       class="form-control" required="required">
                                             </div>
                                         </div>
                                         <div class="col-sm-6 col-md-6">
                                             <div class="form-group">
                                                 <label for="repassword" class="col-form-label">Password</label>
-                                                <input id="repassword" type="text" placeholder="confirm your password" class="form-control">
+                                                <input id="repassword" type="text" placeholder="confirm your password"
+                                                       class="form-control" required="required">
                                             </div>
                                         </div>
 
@@ -306,10 +312,14 @@
                                             <div class="form-group">
                                                 <label>Gender</label><br>
                                                 <label class="custom-control custom-radio custom-control-inline">
-                                                    <input type="radio" name="radio-inline" checked="" class="custom-control-input"><span class="custom-control-label">Male</span>
+                                                    <input type="radio" name="radio-inline" checked=""
+                                                           class="custom-control-input"><span
+                                                        class="custom-control-label">Male</span>
                                                 </label>
                                                 <label class="custom-control custom-radio custom-control-inline">
-                                                    <input type="radio" name="radio-inline" checked="" class="custom-control-input"><span class="custom-control-label">Female</span>
+                                                    <input type="radio" name="radio-inline" checked=""
+                                                           class="custom-control-input"><span
+                                                        class="custom-control-label">Female</span>
                                                 </label>
                                             </div>
                                         </div>
@@ -317,6 +327,7 @@
                                             <div class="form-group">
                                                 <label for="role-select" class="col-form-label">Choose a Role</label>
                                                 <select class="form-control" id="role-select" required="required">
+                                                    <option value="Select" selected="selected">Select</option>
                                                     <option value="Admin">Admin</option>
                                                     <option value="Manager">Manager</option>
                                                     <option value="Employee">Employee</option>
@@ -327,12 +338,84 @@
 
 
                                     </div>
+                                    <div class="row">
+                                        <div class="col-sm-12 col-md-12">
 
+                                            <div class="float-right">
+                                                <button class="btn btn-success rounded" type="submit">Save</button>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </form>
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+
+                        <div class="page-header">
+                            <h2 class="pageheader-title">User Create </h2>
+                        </div>
+
+                        <div class="card">
+                            <h5 class="card-header">Contextual classes</h5>
+                            <div class="card-body">
+                                <table class="table">
+                                    <thead>
+                                    <tr>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Email(username)</th>
+                                        <th scope="col">Gender</th>
+                                        <th scope="col">Phone</th>
+                                        <th scope="col">Role</th>
+                                        <th scope="col">Acion</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr class="table-primary">
+
+                                        <td>baha</td>
+                                        <td>baha@cybertekschool.com</td>
+                                        <td>Male</td>
+                                        <td>2020321546878</td>
+                                        <td>Employee</td>
+                                        <td class="actions">
+                                            <a href=""><button type="button" class="btn btn-warning btn-sm">update</button> </a>
+                                            <a href="" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button> </a>
+                                        </td>
+                                    </tr>
+                                    <tr class="table-success">
+                                        <td>baha</td>
+                                        <td>baha@cybertekschool.com</td>
+                                        <td>Male</td>
+                                        <td>2020321546878</td>
+                                        <td>Employee</td>
+                                        <td class="actions">
+                                            <a href=""><button type="button" class="btn btn-warning btn-sm">update</button> </a>
+                                            <a href="" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button> </a>
+                                        </td>
+                                    </tr>
+                                    <tr class="table-secondary">
+                                        <td>baha</td>
+                                        <td>baha@cybertekschool.com</td>
+                                        <td>Male</td>
+                                        <td>2020321546878</td>
+                                        <td>Employee</td>
+                                        <td class="actions">
+                                            <a href=""><button type="button" class="btn btn-warning btn-sm">update</button> </a>
+                                            <a href="" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button> </a>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+
             </div>
 
 
