Footer added to  User create page

--- a/user-create.html
+++ b/user-create.html
@@ -409,6 +409,12 @@
                                     </tr>
                                     </tbody>
                                 </table>
+
+
+                                <!--footer-->
+                                <footer class="page-footer font-small blue fixed-bottom">
+                                    <div class="footer-copyright text-center py-3">2021 Cybertek-All Rights Reserved</div>
+                                </footer>
                             </div>
                         </div>
 
