Project create page completed logo added to all pages

--- a/user-create.html
+++ b/user-create.html
@@ -48,8 +48,9 @@
     <!-- ============================================================== -->
     <div class="dashboard-header">
         <nav class="navbar navbar-expand-lg bg-info fixed-top">
-            <a class="navbar-brand" href="https://www.cybertekschool.com/"
-            >Cybertek</a
+            <a class="navbar-brand" href="https://www.cybertekschool.com/">
+                <img src="assets/images/Cybertek_Logo.png" width="150" length="150" alt="">
+            </a
             >
             <button
                     class="navbar-toggler"
@@ -359,65 +360,74 @@
                         </div>
 
                         <div class="card">
-                            <h5 class="card-header">Contextual classes</h5>
-                            <div class="card-body">
-                                <table class="table">
-                                    <thead>
-                                    <tr>
-                                        <th scope="col">Name</th>
-                                        <th scope="col">Email(username)</th>
-                                        <th scope="col">Gender</th>
-                                        <th scope="col">Phone</th>
-                                        <th scope="col">Role</th>
-                                        <th scope="col">Acion</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr class="table-primary">
 
-                                        <td>baha</td>
-                                        <td>baha@cybertekschool.com</td>
-                                        <td>Male</td>
-                                        <td>2020321546878</td>
-                                        <td>Employee</td>
-                                        <td class="actions">
-                                            <a href=""><button type="button" class="btn btn-warning btn-sm">update</button> </a>
-                                            <a href="" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button> </a>
-                                        </td>
-                                    </tr>
-                                    <tr class="table-success">
-                                        <td>baha</td>
-                                        <td>baha@cybertekschool.com</td>
-                                        <td>Male</td>
-                                        <td>2020321546878</td>
-                                        <td>Employee</td>
-                                        <td class="actions">
-                                            <a href=""><button type="button" class="btn btn-warning btn-sm">update</button> </a>
-                                            <a href="" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button> </a>
-                                        </td>
-                                    </tr>
-                                    <tr class="table-secondary">
-                                        <td>baha</td>
-                                        <td>baha@cybertekschool.com</td>
-                                        <td>Male</td>
-                                        <td>2020321546878</td>
-                                        <td>Employee</td>
-                                        <td class="actions">
-                                            <a href=""><button type="button" class="btn btn-warning btn-sm">update</button> </a>
-                                            <a href="" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button> </a>
-                                        </td>
-                                    </tr>
-                                    </tbody>
-                                </table>
+                            <table class="table">
+                                <thead>
+                                <tr>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Email(username)</th>
+                                    <th scope="col">Gender</th>
+                                    <th scope="col">Phone</th>
+                                    <th scope="col">Role</th>
+                                    <th scope="col">Acion</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr class="table-primary">
+
+                                    <td>baha</td>
+                                    <td>baha@cybertekschool.com</td>
+                                    <td>Male</td>
+                                    <td>2020321546878</td>
+                                    <td>Employee</td>
+                                    <td class="actions">
+                                        <a href="">
+                                            <button type="button" class="btn btn-warning btn-sm">update</button>
+                                        </a>
+                                        <a href="" class="delete-row">
+                                            <button type="button" class="btn btn-secondary btn-sm">Delete</button>
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr class="table-success">
+                                    <td>baha</td>
+                                    <td>baha@cybertekschool.com</td>
+                                    <td>Male</td>
+                                    <td>2020321546878</td>
+                                    <td>Employee</td>
+                                    <td class="actions">
+                                        <a href="">
+                                            <button type="button" class="btn btn-warning btn-sm">update</button>
+                                        </a>
+                                        <a href="" class="delete-row">
+                                            <button type="button" class="btn btn-secondary btn-sm">Delete</button>
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr class="table-secondary">
+                                    <td>baha</td>
+                                    <td>baha@cybertekschool.com</td>
+                                    <td>Male</td>
+                                    <td>2020321546878</td>
+                                    <td>Employee</td>
+                                    <td class="actions">
+                                        <a href="">
+                                            <button type="button" class="btn btn-warning btn-sm">update</button>
+                                        </a>
+                                        <a href="" class="delete-row">
+                                            <button type="button" class="btn btn-secondary btn-sm">Delete</button>
+                                        </a>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
 
 
-                                <!--footer-->
-                                <footer class="page-footer font-small blue fixed-bottom">
-                                    <div class="footer-copyright text-center py-3">2021 Cybertek-All Rights Reserved</div>
-                                </footer>
-                            </div>
                         </div>
-
+                        <!--footer-->
+                        <footer class="page-footer font-small blue fixed-bottom">
+                            <div class="footer-copyright text-center py-3">2021 Cybertek-All Rights Reserved</div>
+                        </footer>
 
                     </div>
                 </div>
