--- a/project-create.html
+++ b/project-create.html
@@ -35,6 +35,10 @@
             rel="stylesheet"
             href="assets/vendor/fonts/flag-icon-css/flag-icon.min.css"
     />
+    <link
+            rel="stylesheet"
+            href="assets/images/Cybertek_Logo.png"
+    />
     <title>Project Create</title>
 </head>
 
@@ -48,19 +52,13 @@
     <!-- ============================================================== -->
     <div class="dashboard-header">
         <nav class="navbar navbar-expand-lg bg-info fixed-top">
-            <a class="navbar-brand" href="https://www.cybertekschool.com/"
-            >Cybertek</a
-            >
-            <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-toggle="collapse"
-                    data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-            >
-                <span class="navbar-toggler-icon"></span>
+            <a class="navbar-brand" href="https://www.cybertekschool.com/">
+            <img src="assets/images/Cybertek_Logo.png" width="150" length="150" alt="">
+           </a>
+
+
+
+            <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto navbar-right-top">
@@ -276,11 +274,12 @@
                                     </div>
 
                                     <div class="row">
-                                        <div class="col-sm-6 col-md-6">
+                                        <div class="col-sm-12 col-md-12">
                                             <div class="form-group">
                                                 <label for="assignedmanager-select" class="col-form-label">Assigned
                                                     Manager</label>
-                                                <select class="form-control" id="assignedmanager-select" required="required">
+                                                <select class="form-control" id="assignedmanager-select"
+                                                        required="required">
                                                     <option value="Select" selected="selected">Select</option>
                                                     <option value="Admin">Admin</option>
                                                     <option value="Manager">Manager</option>
@@ -291,29 +290,22 @@
                                                 </select>
                                             </div>
                                         </div>
-                                        <div class="col-sm-6 col-md-6">
-                                            <div class="form-group">
-                                                <label for="phonenumber" class="col-form-label">Phone Number</label>
-                                                <input id="phonenumber" type="text" placeholder="phone number"
-                                                       class="form-control" required="required">
-                                            </div>
-                                        </div>
 
 
                                     </div>
                                     <div class="row">
                                         <div class="col-sm-6 col-md-6">
                                             <div class="form-group">
-                                                <label for="password" class="col-form-label">Password</label>
-                                                <input id="password" type="text" placeholder="password"
-                                                       class="form-control" required="required">
+                                                <label for="projectstartdate" class="col-form-label">Project Start
+                                                    Date</label><br>
+                                                <input id="projectstartdate" type=date step=7 min=2014-09-08>
                                             </div>
                                         </div>
                                         <div class="col-sm-6 col-md-6">
                                             <div class="form-group">
-                                                <label for="repassword" class="col-form-label">Password</label>
-                                                <input id="repassword" type="text" placeholder="confirm your password"
-                                                       class="form-control" required="required">
+                                                <label for="projectenddate" class="col-form-label">Project End
+                                                    Date</label><br>
+                                                <input id="projectenddate" type=date step=7 min=2014-09-08>
                                             </div>
                                         </div>
 
@@ -321,31 +313,12 @@
                                     </div>
 
                                     <div class="row">
-                                        <div class="col-sm-6 col-md-6">
-                                            <div class="form-group">
-                                                <label>Gender</label><br>
-                                                <label class="custom-control custom-radio custom-control-inline">
-                                                    <input type="radio" name="radio-inline" checked=""
-                                                           class="custom-control-input"><span
-                                                        class="custom-control-label">Male</span>
-                                                </label>
-                                                <label class="custom-control custom-radio custom-control-inline">
-                                                    <input type="radio" name="radio-inline" checked=""
-                                                           class="custom-control-input"><span
-                                                        class="custom-control-label">Female</span>
-                                                </label>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6 col-md-6">
-                                            <div class="form-group">
-                                                <label for="role-select" class="col-form-label">Choose a Role</label>
-                                                <select class="form-control" id="role-select" required="required">
-                                                    <option value="Select" selected="selected">Select</option>
-                                                    <option value="Admin">Admin</option>
-                                                    <option value="Manager">Manager</option>
-                                                    <option value="Employee">Employee</option>
 
-                                                </select>
+                                        <div class="col-sm-12 col-md-12">
+                                            <div class="form-group">
+                                                <label for="exampleFormControlTextarea1">Project Detail</label>
+                                                <textarea class="form-control" id="exampleFormControlTextarea1"
+                                                          rows="2"></textarea>
                                             </div>
                                         </div>
 
@@ -368,67 +341,76 @@
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
 
                         <div class="page-header">
-                            <h2 class="pageheader-title">User Create </h2>
+                            <h2 class="pageheader-title">Project List</h2>
                         </div>
 
                         <div class="card">
-                            <h5 class="card-header">Contextual classes</h5>
+
                             <div class="card-body">
                                 <table class="table">
                                     <thead>
                                     <tr>
-                                        <th scope="col">Name</th>
-                                        <th scope="col">Email(username)</th>
-                                        <th scope="col">Gender</th>
-                                        <th scope="col">Phone</th>
-                                        <th scope="col">Role</th>
+                                        <th scope="col">Project Code</th>
+                                        <th scope="col">Project Name</th>
+                                        <th scope="col">Start/Ende Date</th>
+                                        <th scope="col">Manager</th>
+                                        <th scope="col">Status</th>
                                         <th scope="col">Acion</th>
                                     </tr>
                                     </thead>
                                     <tbody>
                                     <tr class="table-primary">
 
-                                        <td>baha</td>
-                                        <td>baha@cybertekschool.com</td>
-                                        <td>Male</td>
-                                        <td>2020321546878</td>
-                                        <td>Employee</td>
+                                        <td>PR000</td>
+                                        <td>Human resource CRM</td>
+                                        <td>01.03.2021-11.09.2021</td>
+                                        <td>Craig Jark</td>
+                                        <td>UAT Testing</td>
                                         <td class="actions">
                                             <a href="">
                                                 <button type="button" class="btn btn-warning btn-sm">update</button>
                                             </a>
                                             <a href="" class="delete-row">
                                                 <button type="button" class="btn btn-secondary btn-sm">Delete</button>
+                                            </a>
+                                            <a href="" class="delete-row">
+                                                <button type="button" class="btn btn-facebook btn-sm">Complete</button>
                                             </a>
                                         </td>
                                     </tr>
                                     <tr class="table-success">
-                                        <td>baha</td>
-                                        <td>baha@cybertekschool.com</td>
-                                        <td>Male</td>
-                                        <td>2020321546878</td>
-                                        <td>Employee</td>
+                                        <td>PR000</td>
+                                        <td>Human resource CRM</td>
+                                        <td>01.03.2021-11.09.2021</td>
+                                        <td>Craig Jark</td>
+                                        <td>UAT Testing</td>
                                         <td class="actions">
                                             <a href="">
                                                 <button type="button" class="btn btn-warning btn-sm">update</button>
                                             </a>
                                             <a href="" class="delete-row">
                                                 <button type="button" class="btn btn-secondary btn-sm">Delete</button>
+                                            </a>
+                                            <a href="" class="delete-row">
+                                                <button type="button" class="btn btn-facebook btn-sm">Complete</button>
                                             </a>
                                         </td>
                                     </tr>
                                     <tr class="table-secondary">
-                                        <td>baha</td>
-                                        <td>baha@cybertekschool.com</td>
-                                        <td>Male</td>
-                                        <td>2020321546878</td>
-                                        <td>Employee</td>
+                                        <td>PR000</td>
+                                        <td>Human resource CRM</td>
+                                        <td>01.03.2021-11.09.2021</td>
+                                        <td>Craig Jark</td>
+                                        <td>UAT Testing</td>
                                         <td class="actions">
                                             <a href="">
                                                 <button type="button" class="btn btn-warning btn-sm">update</button>
                                             </a>
                                             <a href="" class="delete-row">
                                                 <button type="button" class="btn btn-secondary btn-sm">Delete</button>
+                                            </a>
+                                            <a href="" class="delete-row">
+                                                <button type="button" class="btn btn-facebook btn-sm">Complete</button>
                                             </a>
                                         </td>
                                     </tr>
