--- a/welcome.html
+++ b/welcome.html
@@ -48,8 +48,9 @@
       <!-- ============================================================== -->
       <div class="dashboard-header">
         <nav class="navbar navbar-expand-lg bg-white fixed-top">
-          <a class="navbar-brand" href="https://www.cybertekschool.com/"
-            >Cybertek</a
+          <a class="navbar-brand" href="https://www.cybertekschool.com/">
+            <img src="assets/images/Cybertek_Logo.png" width="150" length="150" alt="">
+          </a
           >
 
           <button
